<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">


    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hint_back"
        app:layout_constraintEnd_toStartOf="@+id/btn_comfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_model_url_img" />

    <Button
        android:id="@+id/btn_comfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hint_update"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <EditText
        android:id="@+id/txt_model_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/tv_hint_model_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_model_birth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/tv_hint_yyyy_mm_dd_of_birth"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/txt_model_name"
        app:layout_constraintStart_toStartOf="@+id/txt_model_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_model_name" />

    <EditText
        android:id="@+id/txt_model_url_img"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/tv_hint_url_image"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toEndOf="@+id/txt_model_birth"
        app:layout_constraintStart_toStartOf="@+id/txt_model_birth"
        app:layout_constraintTop_toBottomOf="@+id/txt_model_birth" />

</androidx.constraintlayout.widget.ConstraintLayout>